# finetune-vs-rag

./: .gitignore  development_hurdles.md  pyproject.toml
.github/workflows/: ci.yml
data/eval/: eval_set.jsonl
docker/: Dockerfile.finetune  Dockerfile.serve
src/data/: prepare.py  validate.py
src/evaluate/: metrics.py  run_eval.py
src/finetune/: merge.py  quantize.py  train.py
src/rag/: generate.py  ingest.py  retrieve.py
tests/: test_eval.py
